data path changed

--- a/Models/Artificial_Neural_Network.ipynb
+++ b/Models/Artificial_Neural_Network.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Define the directory containing the files\n",
-    "data_directory = 'data/file_per_night'"
+    "data_directory = '../data/file_per_night'"
    ]
   },
   {
