--- a/Models/RandomForest.ipynb
+++ b/Models/RandomForest.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Define the directory containing the files\n",
-    "data_directory = 'data/file_per_night'"
+    "data_directory = '../data/file_per_night'"
    ]
   },
   {
