--- a/error_analysis/Error_Analysis_ANN.ipynb
+++ b/error_analysis/Error_Analysis_ANN.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Define the directory containing the files\n",
-    "data_directory = 'data/file_per_night'"
+    "data_directory = '../data/file_per_night'"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data was generated in notebook [simple_Dec_Tree.ipynb]()."
+    "The data was generated in notebook [simple_Dec_Tree.ipynb](https://github.com/SonkyD/Smart-Start/blob/main/Models/simple_Dec_Tree.ipynb)."
    ]
   },
   {
@@ -110,7 +110,7 @@
    ],
    "source": [
     "# Load the pretrained model\n",
-    "model = load_model('model/ANN_trained_on_full_data.h5')"
+    "model = load_model('../model/ANN_trained_on_full_data.h5')"
    ]
   },
   {
