--- a/error_analysis/Error_Analysis_Dec_Tree.ipynb
+++ b/error_analysis/Error_Analysis_Dec_Tree.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Define the directory containing the files\n",
-    "data_directory = 'data/file_per_night'"
+    "data_directory = '../data/file_per_night'"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data was generated in notebook [simple_Dec_Tree.ipynb]()."
+    "The data was generated in notebook [simple_Dec_Tree.ipynb](https://github.com/SonkyD/Smart-Start/blob/main/Models/simple_Dec_Tree.ipynb)."
    ]
   },
   {
